--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -20,8 +20,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: |
-          echo "🎉 The job was triggered by event: ${{ github.event_name }}"
-          echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ."
+          echo "The job was triggered by event: ${{ github.event_name }}"
+          echo "The name of your branch is ${{ github.ref }} and your repository is ."
 
       - uses: actions/checkout@v3.3.0
 
@@ -29,3 +29,42 @@ jobs:
         run: |
           echo "The repository ${{ github.repository }} contains the following files:"
           tree
+  Test:
+    runs-on: ubuntu-latest
+    environment: Test
+    needs: Build
+    if: github.event_name == 'workflow_dispatch'
+    steps:
+      - run: echo "Testing..."
+  Load-Test:
+    runs-on: ubuntu-latest
+    environment: Load-Test
+    needs: Build
+    if: github.event_name == 'workflow_dispatch'
+    steps:
+      - run: echo "Testing..."
+      - run: sleep 15
+  Production:
+    runs-on: ubuntu-latest
+    environment:
+      name: Production
+      url: https://writeabout.net
+    needs: [Test, Load-Test]
+    if: github.event.inputs.environment == 'Production'
+    steps:
+      - run: |
+          echo "Step 1..."
+          sleep 10
+      - run: |
+          echo "Step 2..."
+          sleep 10
+      - run: |
+          echo "Step 3..."
+          sleep 10
+      - run: |
+          echo "Step 4..."
+          sleep 10
+      - run: |
+          echo "Step 5..."
+          sleep 10
+    
